--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,17 @@
 spring:
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE}
   datasource:
-    url: jdbc:mysql://localhost:3306/employee_db
+    url: ${DATABASE_URL}
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: "root"
-    password: "1qaz2wsx!"
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
     hibernate:
       ddl-auto: validate
-    flyway:
-      baseline-on-migrate: true
-      locations: classpath:db/migration
-      repair-on-migrate: true
+  flyway:
+    baseline-on-migrate: true
+    locations: classpath:db/migration
+    repair-on-migrate: true
