--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,6 @@ on:
 
 permissions:
   contents: read
-  issues: read
   checks: write
   pull-requests: write
 
@@ -147,27 +146,27 @@ jobs:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
           RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
 
-#      - name: Health Check
-#        run: |
-#          echo "Starting health check (5 minutes max)..."
-#
-#          SERVICE_URL="${{ secrets.SERVICE_BASE_URL }}"
-#
-#          # Wait 60 seconds for service startup
-#          echo "Waiting 60 seconds for service to start..."
-#          sleep 60
-#
-#          # 5-minute health check with 30-second intervals
-#          for i in {1..10}; do
-#            echo "Health check attempt $i/10..."
-#            if curl -s -f --max-time 30 "${SERVICE_URL}/health" > /dev/null 2>&1; then
-#              echo "✅ Service is healthy!"
-#              exit 0
-#            fi
-#            if [ $i -lt 10 ]; then
-#              echo "⏳ Service not ready, waiting 30s..."
-#              sleep 30
-#            fi
-#          done
-#          echo "❌ Health check failed after 5 minutes"
-#          exit 1
+      - name: Health Check
+        run: |
+          echo "Starting health check (5 minutes max)..."
+
+          SERVICE_URL="${{ secrets.SERVICE_BASE_URL }}"
+
+          # Wait 60 seconds for service startup
+          echo "Waiting 60 seconds for service to start..."
+          sleep 60
+
+          # 5-minute health check with 30-second intervals
+          for i in {1..10}; do
+            echo "Health check attempt $i/10..."
+            if curl -s -f --max-time 30 "${SERVICE_URL}/health" > /dev/null 2>&1; then
+              echo "✅ Service is healthy!"
+              exit 0
+            fi
+            if [ $i -lt 10 ]; then
+              echo "⏳ Service not ready, waiting 30s..."
+              sleep 30
+            fi
+          done
+          echo "❌ Health check failed after 5 minutes"
+          exit 1
